PharmaDemo/src/objects/AppLauncher__c.object
<CustomObject>
    <description>Keeps records of all available mobile apps to be launched from the iPad/iPhone.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Launcher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Launchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>